Fixed app icon. Fixed overflow x scroll on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@100;200;400;500;700&display=swap');
 
+html, body {
+	overflow-x: hidden;
+}
+
 body {
 	font-size: 18px;
 	font-family: 'Public Sans', sans-serif;
